# agent-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  IDEAS.md  README.md  TODO.md  pyproject.toml  repos.example.toml
.agents/: README.md
.agents/skills/backlog-triage/: SKILL.md
.agents/skills/backlog-triage/resources/: azure-devops-batch.example.json  azure-devops-fields.md  backlog-schema.sql  triage-queries.sql
.agents/skills/backlog-triage/scripts/: backlog_db.py  brief.py
.agents/skills/develop-ticket/: SKILL.md
.agents/skills/develop-ticket/scripts/: state.py  validate.py
.agents/work-items/: .gitkeep
data/: tickets.sample.json
skills/backlog-groom/: SKILL.md
skills/fix-bug/: SKILL.md
skills/infra-maintenance/: SKILL.md
skills/new-feature/: SKILL.md
skills/pr-babysit/: SKILL.md
skills/prod-issue/: SKILL.md
skills/qa-test/: SKILL.md
skills/ticket-execute/: SKILL.md
skills/ticket-interview/: SKILL.md
skills/ticket-pick/: LEARNINGS.md  SKILL.md
skills/ticket-plan/: SKILL.md
skills/ticket-retro/: SKILL.md
skills/ticket-triage/: SKILL.md
skills/ticket-validate/: SKILL.md
src/agent_harness/: __init__.py  cli.py  config.py  context.py  cursor.py  loop.py  models.py  skills_sync.py  state.py  ui.py
src/agent_harness/adapters/: prs.py  tickets.py
src/agent_harness/stages/: babysit.py  execute.py  groom.py  interview.py  pick.py  plan.py  retro.py  triage.py  validate.py
tests/: test_adapters.py  test_cursor.py  test_pick.py  test_skills_sync.py  test_state.py
