[project]
name = "agent-harness"
version = "0.1.0"
description = "Agentic ticket loop: triage, interview, plan, execute, validate, PR — via the Cursor headless CLI"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
]

[project.scripts]
loop = "agent_harness.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pre-commit",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", # pycodestyle errors (subset that matters with a formatter)
    "F",              # pyflakes — undefined names, unused imports/vars
    "I",              # isort — deterministic import order
    "UP",             # pyupgrade — modern 3.11 idioms
    "B",              # bugbear — likely bugs (mutable defaults, etc.)
    "SIM",            # simplify — collapsible ifs, redundant bools
    "C4",             # comprehension rewrites
    "RUF",            # ruff-specific correctness checks
]

[tool.ruff.lint.per-file-ignores]
# Add hotspots here file-by-file; never delete a family above to silence one module.

[tool.basedpyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
exclude = [".venv"]
